<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="listedPrice">Listed Price</string>
    <string name="priceHint">Enter Listed Price</string>
    <string name="discountPercentage">Discount %</string>
    <string name="tenPercent">10%</string>
    <string name="twentyPercent">20%</string>
    <string name="fiftyPercent">50%</string>
    <string name="customPercent">Custom</string>
    <string name="custom">Custom</string>
    <string name="initialZero">0%</string>
    <string name="youSaved">You Saved:</string>
    <string name="youPay">You Pay:</string>
    <string name="zeroDollars">$ 0.00</string>
    <string name="exitButtonText">Exit</string>

</resources>
